--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
+insert_final_newline = false
 
 [*.{json,md,yml}]
-indent_size = 2
 indent_style = space
